# edgar-nl2sql

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRACTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  generation.py  logging_config.py  main.py  models.py  pipeline.py  retrieval.py  sql_guard.py
app/static/: index.html
eval/: golden_set.yaml  holdout_set.yaml  test_eval.py
scripts/: build_embeddings.py  context_docs.py  load_edgar.py  schema.sql
tests/: conftest.py  test_api.py  test_config.py  test_pipeline.py  test_sql_guard.py
